# jetson-embeddedUI

./: .gitignore  CMakeLists.txt  README.md  provision.sh
configuration/: settings.json
src/: IO.cpp  IO.h  ThreadUtils.cpp  ThreadUtils.h  UiServer.cpp  UiServer.h  WebSystem.cpp  WebSystem.h  configuration.cpp  configuration.hpp  main.cpp  pwm.cpp  pwm.h  serial.cpp  serial.h
web/: index.html
